# turboquant-mlx

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  compat.py  config.py  convert.py  demo_kv.py  evaluate.py  generate.py  pyproject.toml  quantize_model.py  sampling.py  serve.py  setup.py  test_kv_cache.py
.github/workflows/: release.yml
benchmarks/: eval_gpt_oss_20b.json  eval_llama_3.2_1b.json  eval_llama_3.2_3b.json  eval_qwen2.5_7b.json  eval_qwen3.5_4b.json  eval_qwen_moe_quick.json  kernel_results.json  layer_results.json  model_results.json  qjl_results.json  weight_analysis.json
core/: __init__.py  codebook.py  packing.py  polar_quantize.py  qjl.py  rotation.py
csrc/: CMakeLists.txt  bindings.cpp  polar_kernels.metal  polar_ops.cpp  polar_ops.h
integration/: rotation_configs.py
kernels/: __init__.py  polar_gather_qmv.py  polar_multi_gather_qmv.py  polar_qmv.py
layers/: __init__.py  polar_kv_cache.py  polar_linear.py  polar_switch_linear.py
tests/: test_core.py
